--- a/results_reproduce/conf/train_adapter.yaml
+++ b/results_reproduce/conf/train_adapter.yaml
@@ -1,7 +1,7 @@
 defaults:
   - _self_
   - adapter: linear
-  # - prompting: cifar_10
+  - prompting: mnist
 
 prompting:
   templates: ['a photo of a {}.']
