--- a/results_reproduce/conf/train_adapter.yaml
+++ b/results_reproduce/conf/train_adapter.yaml
@@ -1,4 +1,6 @@
 defaults:
+  - hydra_setup
+  - adapter_setup
   - _self_
   - adapter: linear
   - prompting: mnist
@@ -20,7 +22,3 @@ training:
   learning_rate: 0.00001
   batch_size: 32
   epochs_num: 20
-
-meta:
-  device: cuda
-  random_state: 42
