eval adapter config

--- a/results_reproduce/conf/eval_adapter.yaml
+++ b/results_reproduce/conf/eval_adapter.yaml
@@ -5,10 +5,10 @@ defaults:
   - prompting: mnist
 
 eval:
-  checkpoint_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-02/16-48-08/checkpoints/epoch_1/model.ckpt
+  checkpoint_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-02/18-27-00/checkpoints/epoch_3/model.ckpt
   train_config_path: # if none, it is deducted from checkpoint_path
 
-data:
+dataset:
   dataset_name: MNIST
   num_workers: 2
   batch_size: 32
