--- a/results_reproduce/conf/train_adapter.yaml
+++ b/results_reproduce/conf/train_adapter.yaml
@@ -18,5 +18,9 @@ data:
   checkpoints_dir: checkpoints
 
 training:
-  learning_rate: 0.00001
   epochs_num: 20
+  adam_params:
+    lr: 0.00001
+    betas: [0.9, 0.98]
+    eps: 0.000001
+    weight_decay: 0.2
