--- a/results_reproduce/conf/train_adapter.yaml
+++ b/results_reproduce/conf/train_adapter.yaml
@@ -12,7 +12,8 @@ dataset:
   dataset_name: MNIST-test
   batch_size: 32
   num_workers: 2
-  validation_size: 0.25
+  validation_size: 0
+  image_features_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-21/11-15-13/image_features.pt
 
 data:
   checkpoints_dir: checkpoints
