--- a/results_reproduce/conf/eval_adapter.yaml
+++ b/results_reproduce/conf/eval_adapter.yaml
@@ -2,13 +2,14 @@ defaults:
   - hydra_setup
   - adapter_setup
   - _self_
-  - prompting: mnist
+  # - prompting: mnist
 
 eval:
-  checkpoint_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-02/22-41-39/checkpoints/epoch_2/model.ckpt
+  checkpoint_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-21/16-53-05/checkpoints/epoch_20/model.ckpt
   train_config_path: # if none, it is deducted from checkpoint_path
+  image_features_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-21/16-47-25/image_features.pt
 
 dataset:
-  dataset_name: MNIST-train
+  dataset_name: CIFAR100-test
   num_workers: 2
   batch_size: 32
