datasets from config

--- a/results_reproduce/conf/save_features.yaml
+++ b/results_reproduce/conf/save_features.yaml
@@ -7,7 +7,7 @@ clip:
   model_name: ViT-B/16
 
 dataset:
-  dataset_name: MNIST-test
+  dataset_name: ImageNet-val
   batch_size: 512
   num_workers: 2
 
