--- a/results_reproduce/conf/save_features.yaml
+++ b/results_reproduce/conf/save_features.yaml
@@ -2,14 +2,12 @@ defaults:
   - hydra_setup
   - adapter_setup
   - _self_
+  - dataset: mnist_train
 
 clip:
   model_name: ViT-B/16
 
-dataset:
-  dataset_name: ImageNet-val
+data:
   batch_size: 512
   num_workers: 2
-
-data:
   output_path: image_features.pt
