--- a/outputs/2022-07-25/16-25-45/.hydra/config.yaml
+++ b/outputs/2022-07-25/16-25-45/.hydra/config.yaml
@@ -1,15 +1,19 @@
-defaults:
-  - hydra_setup
-  - adapter_setup
-  - _self_
-  - dataset: imagenet_v2
-  # - prompting: mnist
-
+prompting:
+  templates:
+  - a photo of a {}.
+  classes: null
+meta:
+  device: cuda
+  random_state: 42
+path:
+  cache_dir: /home/myurachinskiy/.cache
 eval:
   checkpoint_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-24/17-42-56/checkpoints/epoch_20/model.ckpt
-  train_config_path: # if none, it is deducted from checkpoint_path
+  train_config_path: null
   image_features_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-25/16-18-44/image_features.pt
-
 data:
   num_workers: 2
   batch_size: 512
+dataset:
+  _target_: imagenetv2_pytorch.ImageNetV2Dataset
+  location: ${path.cache_dir}
