--- a/results_reproduce/conf/eval_clip.yaml
+++ b/results_reproduce/conf/eval_clip.yaml
@@ -2,14 +2,14 @@ defaults:
   - hydra_setup
   - adapter_setup
   - _self_
-  - dataset: imagenet_v2
-  - prompting: imagenet
+  - dataset: mnist_test
+  - prompting: mnist
 
 clip:
   model_name: ViT-B/16
 
 eval:
-  image_features_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-25/16-18-44/image_features.pt
+  image_features_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-25/14-57-54/image_features.pt
 
 data:
   num_workers: 2
