--- a/results_reproduce/conf/train_adapter.yaml
+++ b/results_reproduce/conf/train_adapter.yaml
@@ -2,8 +2,8 @@ defaults:
   - hydra_setup
   - adapter_setup
   - _self_
-  - adapter: linear
-  - dataset: cifar100_train
+  - adapter: original_image
+  - dataset: imagenet_train_no_image
   # - prompting: cifar100
 
 clip:
@@ -14,12 +14,12 @@ data:
   num_workers: 2
   validation_size: 0
   checkpoints_dir: checkpoints
-  image_features_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-21/16-38-43/image_features.pt
+  image_features_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-22/12-56-22/image_features.pt
 
 training:
-  epochs_num: 20
+  epochs_num: 200
   adam_params:
-    lr: 0.00001
+    lr: 0.002
     betas: [0.9, 0.98]
     eps: 0.000001
     weight_decay: 0.2
