--- a/summer_clip/conf/dataset/imagenet_v2.yaml
+++ b/summer_clip/conf/dataset/imagenet_v2.yaml
@@ -1,3 +1,3 @@
-_target_: results_reproduce.train_adapter.ImageNetV2Wrapper
+_target_: summer_clip.utils.datasets.ImageNetV2Wrapper
 location: ${path.cache_dir}
 image_net_root: ${path.cache_dir}/ImageNet
