--- a/summer_clip/conf/train_adapter.yaml
+++ b/summer_clip/conf/train_adapter.yaml
@@ -2,8 +2,8 @@ defaults:
   - hydra_setup
   - adapter_setup
   - _self_
-  - adapter: original_image
-  - dataset: imagenet_train_no_image
+  - adapter: linear
+  - dataset: mnist_train
   # - prompting: cifar100
 
 clip:
@@ -14,12 +14,19 @@ data:
   num_workers: 2
   validation_size: 0
   checkpoints_dir: checkpoints
-  image_features_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-22/12-56-22/image_features.pt
+  image_features_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-23/12-49-24/image_features.pt
 
 training:
-  epochs_num: 200
+  epochs_num: 20
   adam_params:
-    lr: 0.002
+    lr: 0.00001
     betas: [0.9, 0.98]
     eps: 0.000001
     weight_decay: 0.2
+
+log:
+  calculate_every: 1
+
+exp:
+  project: train_adapter
+  name: clip_adapter_linear
