--- a/summer_clip/conf/save_image_outs.yaml
+++ b/summer_clip/conf/save_image_outs.yaml
@@ -2,13 +2,13 @@ defaults:
   - hydra_setup
   - adapter_setup
   - _self_
-  - dataset: cifar10_train
+  - dataset: imagenet_train_no_image
 
 clip:
   model_name: ViT-B/16
 
 data:
-  image_features_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-22/12-44-05/image_features.pt
+  image_features_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-22/12-56-22/image_features.pt
   output_image_outs: image_outs.pt
 
 exp:
