--- a/summer_clip/conf/image_attention.yaml
+++ b/summer_clip/conf/image_attention.yaml
@@ -3,7 +3,7 @@ defaults:
   - adapter_setup
   - _self_
   - dataset: imagenet_val_no_image
-  - cache_strategy: threshold
+  - cache_strategy: topk
 
 clip:
   model_name: ViT-B/16
@@ -14,7 +14,7 @@ data:
 cache:
   image_features_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-22/12-56-22/image_features.pt
   image_outs_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-08-18/10-53-59/image_outs.pt
-  alpha: 1
+  alpha: 0.5
   beta: 5.5
 
 exp:
