--- a/summer_clip/conf/save_features.yaml
+++ b/summer_clip/conf/save_features.yaml
@@ -2,7 +2,7 @@ defaults:
   - hydra_setup
   - adapter_setup
   - _self_
-  - dataset: imagenet_v2
+  - dataset: eurosat
 
 clip:
   model_name: ViT-B/16
