--- a/summer_clip/conf/save_image_outs.yaml
+++ b/summer_clip/conf/save_image_outs.yaml
@@ -6,10 +6,10 @@ defaults:
   - prompting: tip_eurosat
 
 clip:
-  model_name: ViT-B/16
+  model_name: RN50
 
 data:
-  image_features_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-08-18/15-42-53/image_features.pt
+  image_features_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-08-18/16-39-01/image_features.pt
   output_image_outs: image_outs.pt
 
 exp:
