--- a/summer_clip/conf/save_features.yaml
+++ b/summer_clip/conf/save_features.yaml
@@ -2,10 +2,10 @@ defaults:
   - hydra_setup
   - adapter_setup
   - _self_
-  - dataset: eurosat
+  - dataset: imagenet_val
 
 clip:
-  model_name: ViT-B/16
+  model_name: RN50
 
 data:
   batch_size: 512
