--- a/summer_clip/conf/image_attention.yaml
+++ b/summer_clip/conf/image_attention.yaml
@@ -5,7 +5,7 @@ defaults:
   - dataset: imagenet_val_no_image
   - dataset@cache.dataset: imagenet_train_no_image
   - prompting: tip_imagenet
-  - cache_strategy: topk
+  - cache_strategy: global_random
 
 clip:
   model_name: RN50
@@ -18,6 +18,7 @@ cache:
   image_outs_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-08-22/22-01-02/image_outs.pt
   alpha: [0, 1.0]
   beta: [0, 5.5]
+  replace_outs_with_golds: true
 
 exp:
   project: clip_searcher
