--- a/summer_clip/conf/cache_strategy/threshold.yaml
+++ b/summer_clip/conf/cache_strategy/threshold.yaml
@@ -1,3 +1,3 @@
 _target_: summer_clip.clip_searcher.cache_strategy.ThresholdStrategy
-use_softmax: true
-threshold: 0.2
+use_softmax: [true]
+threshold: [0.2]
