tip-adapter checks

--- a/summer_clip/conf/image_attention.yaml
+++ b/summer_clip/conf/image_attention.yaml
@@ -6,7 +6,7 @@ defaults:
   - dataset: imagenet_val_no_image
   - dataset@cache.dataset: imagenet_train_no_image
   - prompting: tip_imagenet
-  - cache_strategy: topk
+  - cache_strategy: per_gold_class_random
   - cache_value_strategy: hard_cache
   - cache_weights_strategy: tip_adapter
 
@@ -19,8 +19,8 @@ data:
 cache:
   image_features_path: ${saved_paths.image_features.ImageNet_train-RN50}
   image_outs_path: ${saved_paths.logits.ImageNet_train-RN50-tip_adapter}
-  alpha: [0, 1.0]
-  replace_outs_with_golds: false
+  alpha: [1.0]
+  replace_outs_with_golds: true
 
 exp:
   project: clip_searcher
