--- a/summer_clip/conf/cache_strategy/per_gold_class_random.yaml
+++ b/summer_clip/conf/cache_strategy/per_gold_class_random.yaml
@@ -1,3 +1,4 @@
 _target_: summer_clip.clip_searcher.cache_strategy.PerGoldClassRandomSampleStrategy
 topk: [16]
-cache_dataset: [${cache.dataset}]
+cache_dataset:
+  - ${cache.dataset}
