--- a/summer_clip/conf/image_attention.yaml
+++ b/summer_clip/conf/image_attention.yaml
@@ -3,9 +3,9 @@ defaults:
   - adapter_setup
   - saved_paths
   - _self_
-  - dataset: imagenet_val_no_image
-  - dataset@cache.dataset: imagenet_train_no_image
-  - prompting: tip_imagenet
+  - dataset: standford_cars_test
+  - dataset@cache.dataset: standford_cars_train
+  - prompting: tip_standford_cars
   - cache_strategy: per_gold_class_random
   - cache_value_strategy: hard_cache
   - cache_weights_strategy: tip_adapter
@@ -14,11 +14,11 @@ clip:
   model_name: RN50
 
 data:
-  image_features_path: ${saved_paths.image_features.ImageNet_val-RN50}
+  image_features_path: ${saved_paths.image_features.StanfordCars_test-RN50}
 
 cache:
-  image_features_path: ${saved_paths.image_features.ImageNet_train-RN50}
-  image_outs_path: ${saved_paths.logits.ImageNet_train-RN50-tip_adapter}
+  image_features_path: ${saved_paths.image_features.StanfordCars_train-RN50}
+  image_outs_path: ${saved_paths.logits.StanfordCars_train-RN50-tip_standford_cars}
   alpha: [1.0]
   replace_outs_with_golds: true
 
