--- a/summer_clip/conf/save_image_outs.yaml
+++ b/summer_clip/conf/save_image_outs.yaml
@@ -1,15 +1,16 @@
 defaults:
   - hydra_setup
   - adapter_setup
+  - saved_paths
   - _self_
-  - dataset: imagenet_train_no_image
-  - prompting: tip_imagenet
+  - dataset: standford_cars_train
+  - prompting: tip_standford_cars
 
 clip:
   model_name: RN50
 
 data:
-  image_features_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-08-21/18-35-13/image_features.pt
+  image_features_path: ${saved_paths.image_features.StanfordCars_train-RN50}
   output_image_outs: image_outs.pt
 
 exp:
