--- a/summer_clip/conf/eval_clip.yaml
+++ b/summer_clip/conf/eval_clip.yaml
@@ -1,15 +1,16 @@
 defaults:
   - hydra_setup
   - adapter_setup
+  - saved_paths
   - _self_
-  - dataset: mnist_test
-  - prompting: mnist
+  - dataset: imagenet_val_no_image
+  - prompting: imagenet
 
 clip:
-  model_name: ViT-B/16
+  model_name: RN50
 
 eval:
-  image_features_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-25/14-57-54/image_features.pt
+  image_features_path: ${saved_paths.image_features.ImageNet_val-RN50}
 
 data:
   num_workers: 2
