eurosat classes order

--- a/summer_clip/conf/eval_clip.yaml
+++ b/summer_clip/conf/eval_clip.yaml
@@ -4,7 +4,7 @@ defaults:
   - saved_paths
   - _self_
   - dataset: eurosat
-  - prompting: tip_eurosat
+  - prompting: eurosat
 
 clip:
   model_name: RN50
