--- a/summer_clip/conf/image_attention.yaml
+++ b/summer_clip/conf/image_attention.yaml
@@ -3,8 +3,8 @@ defaults:
   - adapter_setup
   - saved_paths
   - _self_
-  - dataset: stanford_cars_test
-  - dataset@cache.dataset: stanford_cars_train
+  - dataset: tip_stanford_cars_test
+  - dataset@cache.dataset: tip_stanford_cars_train
   - prompting: tip_stanford_cars
   - cache_strategy: per_gold_class_random
   - cache_value_strategy: hard_cache
@@ -14,11 +14,11 @@ clip:
   model_name: RN50
 
 data:
-  image_features_path: ${saved_paths.image_features.StanfordCars_test-RN50}
+  image_features_path: ${saved_paths.image_features.StanfordCars_tip_test-RN50}
 
 cache:
-  image_features_path: ${saved_paths.image_features.StanfordCars_train-RN50}
-  image_outs_path: ${saved_paths.logits.StanfordCars_train-RN50-tip_stanford_cars}
+  image_features_path: ${saved_paths.image_features.StanfordCars_tip_train-RN50}
+  image_outs_path: ${saved_paths.logits.StanfordCars_tip_train-RN50-tip_stanford_cars}
   alpha: [3]
   replace_outs_with_golds: true
 
