--- a/summer_clip/conf/save_image_outs.yaml
+++ b/summer_clip/conf/save_image_outs.yaml
@@ -3,14 +3,14 @@ defaults:
   - adapter_setup
   - saved_paths
   - _self_
-  - dataset: stanford_cars_train
+  - dataset: tip_stanford_cars_train
   - prompting: tip_stanford_cars
 
 clip:
   model_name: RN50
 
 data:
-  image_features_path: ${saved_paths.image_features.StanfordCars_train-RN50}
+  image_features_path: ${saved_paths.image_features.StanfordCars_tip_train-RN50}
   output_image_outs: image_outs.pt
 
 exp:
