--- a/summer_clip/conf/saved_paths.yaml
+++ b/summer_clip/conf/saved_paths.yaml
@@ -41,3 +41,4 @@ logits:
   EuroSAT-ViT_B/16-tip_eurosat: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-08-20/00-16-21/image_outs.pt
   EuroSAT-RN50-tip_eurosat: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-08-23/14-52-14/image_outs.pt
   StanfordCars_train-RN50-tip_stanford_cars: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-09-05/19-53-58/image_outs.pt
+  StanfordCars_tip_train-RN50-tip_stanford_cars: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-09-08/15-51-16/image_outs.pt
