--- a/summer_clip/conf/image_attention.yaml
+++ b/summer_clip/conf/image_attention.yaml
@@ -6,7 +6,7 @@ defaults:
   - dataset: tip_stanford_cars_test_no_image
   - dataset@cache.dataset: tip_stanford_cars_train_no_image
   - prompting: tip_stanford_cars
-  - cache_strategy: per_gold_class_random
+  - cache_strategy: topk
   - cache_value_strategy: hard_cache
   - cache_weights_strategy: tip_adapter
 
@@ -19,7 +19,7 @@ data:
 cache:
   image_features_path: ${saved_paths.image_features.StanfordCars_tip_train-RN50}
   image_outs_path: ${saved_paths.logits.StanfordCars_tip_train-RN50-tip_stanford_cars}
-  alpha: [3]
+  alpha: [0.1, 0.5, 1, 2, 3, 4]
   replace_outs_with_golds: true
 
 exp:
