--- a/summer_clip/conf/cache_weights_strategy/tip_adapter.yaml
+++ b/summer_clip/conf/cache_weights_strategy/tip_adapter.yaml
@@ -1,2 +1,2 @@
 _target_: summer_clip.clip_searcher.cache_weights_strategy.TipAdapterWeightsStrategy
-beta: [0.1, 1.0, 5.5]
+beta: [0.1, 1.0, 1.5, 3.5, 5.5, 7.5, 9.5, 11.5]
