--- a/summer_clip/conf/image_attention.yaml
+++ b/summer_clip/conf/image_attention.yaml
@@ -19,7 +19,7 @@ data:
 cache:
   image_features_path: ${saved_paths.image_features.StanfordCars_tip_train-RN50}
   image_outs_path: ${saved_paths.logits.StanfordCars_tip_train-RN50-tip_stanford_cars}
-  alpha: [0.1, 0.5, 1, 2, 3, 4]
+  alpha: [0.0, 0.1, 0.5, 1., 2., 3., 4.]
   replace_outs_with_golds: true
 
 exp:
