--- a/summer_clip/conf/save_image_outs.yaml
+++ b/summer_clip/conf/save_image_outs.yaml
@@ -3,7 +3,7 @@ defaults:
   - adapter_setup
   - saved_paths
   - _self_
-  - dataset: tip_stanford_cars_train
+  - dataset: tip_stanford_cars_train_no_image
   - prompting: tip_stanford_cars
 
 clip:
