--- a/summer_clip/conf/cache_strategy/per_gold_class_random.yaml
+++ b/summer_clip/conf/cache_strategy/per_gold_class_random.yaml
@@ -1,4 +1,4 @@
 _target_: summer_clip.clip_searcher.cache_strategy.PerGoldClassRandomSampleStrategy
-topk: [2, 4, 8, 16]
+topk: [1, 2, 4, 8, 16, 32, 64]
 cache_dataset:
   - ${cache.dataset}
