--- a/summer_clip/conf/image_attention.yaml
+++ b/summer_clip/conf/image_attention.yaml
@@ -22,6 +22,11 @@ cache:
   alpha: [0.0, 0.1, 0.5, 1., 2., 3., 4.]
   replace_outs_with_golds: false
 
+run_saves:
+  save_labels: false
+  save_cache_inds: false
+  save_preds: false
+
 exp:
   project: clip_searcher
   name: image_attention
