--- a/summer_clip/conf/saved_paths.yaml
+++ b/summer_clip/conf/saved_paths.yaml
@@ -26,6 +26,9 @@ image_features:
   StanfordCars_tip_train-RN50: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-09-09/10-25-36/image_features.pt
   StanfordCars_tip_test-RN50: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-09-09/10-30-34/image_features.pt
 
+  EuroSAT_tip_train-RN50: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-10-25/16-48-07/image_features.pt
+  EuroSAT_tip_test-RN50: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-10-25/16-57-16/image_features.pt
+
 adapters:
   linear:
     CIFAR100_train-ViT_B/16: /home/myurachinskiy/CLIP/summer-clip/outputs/2022-07-25/10-05-09
