--- a/summer_clip/conf/image_attention.yaml
+++ b/summer_clip/conf/image_attention.yaml
@@ -3,9 +3,9 @@ defaults:
   - adapter_setup
   - saved_paths
   - _self_
-  - dataset: tip_stanford_cars_test_no_image
-  - dataset@cache.dataset: tip_stanford_cars_train_no_image
-  - prompting: tip_stanford_cars
+  - dataset: tip_eurosat_test_no_image
+  - dataset@cache.dataset: tip_eurosat_train_no_image
+  - prompting: tip_eurosat
   - cache_strategy: topk
   - cache_value_strategy: hard_cache
   - cache_weights_strategy: tip_adapter
@@ -14,11 +14,11 @@ clip:
   model_name: RN50
 
 data:
-  image_features_path: ${saved_paths.image_features.StanfordCars_tip_test-RN50}
+  image_features_path: ${saved_paths.image_features.EuroSAT_tip_test-RN50}
 
 cache:
-  image_features_path: ${saved_paths.image_features.StanfordCars_tip_train-RN50}
-  image_outs_path: ${saved_paths.logits.StanfordCars_tip_train-RN50-tip_stanford_cars}
+  image_features_path: ${saved_paths.image_features.EuroSAT_tip_train-RN50}
+  image_outs_path: ${saved_paths.logits.EuroSAT_tip_train-RN50-tip_eurosat}
   alpha: [0.0, 0.1, 0.5, 1., 2., 3., 4.]
   replace_outs_with_golds: false
 
