--- a/summer_clip/conf/image_attention.yaml
+++ b/summer_clip/conf/image_attention.yaml
@@ -32,6 +32,7 @@ run_saves:
   save_labels: false
   save_cache_inds: false
   save_preds: false
+  save_logits: false
 
 exp:
   project: clip_searcher
