--- a/summer_clip/conf/adapter_setup.yaml
+++ b/summer_clip/conf/adapter_setup.yaml
@@ -1,11 +1,6 @@
+defaults:
+  - meta_setup
+
 prompting: # default prompting strategy
   templates: ['a photo of a {}.']
   classes: # if none, it is loaded as dataset.classes
-
-meta:
-  device: cuda
-  random_state: 42
-
-path:
-  # cache_dir: "~/.cache"
-  cache_dir: /home/myurachinskiy/.cache
