--- a/summer_clip/conf/train_gpt.yaml
+++ b/summer_clip/conf/train_gpt.yaml
@@ -52,6 +52,11 @@ scheduler:
   name: cosine
   warmup_part: 0.05
 
+pretrained:
+  model: null
+  optimizer: null
+  scheduler: null
+
 accelerator:
   gradient_accumulation_steps: 16
 
