--- a/summer_clip/conf/train_prompt.yaml
+++ b/summer_clip/conf/train_prompt.yaml
@@ -25,13 +25,13 @@ init_prompter:
 
 data_loader:
   train:
-    batch_size: 36
+    batch_size: 128
     shuffle: true
     pin_memory: true
     num_workers: 4
 
 optim:
-  weight_decay: 0.1
+  weight_decay: 0.01
   optimizer:
     path: summer_clip.clip_prompt.prompt_learner.make_langevin_optim
     kwargs:
@@ -40,8 +40,8 @@ optim:
           path: torch.optim.AdamW
           kwargs:
             lr: 0.3
-        beta_start: 0.1
-        beta_end: 0.0001
+        beta_start: 1e-8
+        beta_end: 1e-8
 
 scheduler:
   # get_scheduler_fun: transformers.get_scheduler
@@ -56,7 +56,7 @@ accelerator:
   gradient_accumulation_steps: 16
 
 training:
-  epochs_num: 4
+  epochs_num: 20
   info_steps: 1
   clip_grad_norm: 1.0
   checkpoints_dir: checkpoints/
