--- a/summer_clip/conf/train_prompt.yaml
+++ b/summer_clip/conf/train_prompt.yaml
@@ -2,14 +2,15 @@ defaults:
   - hydra_setup
   - meta_setup
   - _self_
-  - dataset: tip_eurosat_train_no_image
-  - prompting: tip_eurosat
+  - dataset: imagenet_train_no_image
+  - prompting: tip_imagenet
 
 clip:
   model_name: RN50
   tokenizer_id: openai/clip-vit-base-patch32  # should not differ from large
 
 model:
+  use_clip_gpt: false
   meta_cfg_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2023-02-02/22-43-01/checkpoints/epoch_4/step_222605/model_cfg.yaml
   state_dict_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2023-02-02/22-43-01/checkpoints/epoch_4/step_222605/model.ckpt
 
@@ -23,9 +24,14 @@ init_prompter:
   token: <|startoftext|>
   length: 5
 
+text_batcher:
+  path: summer_clip.clip_prompt.prompt_learner.OneStrTextBatcher
+  kwargs:
+    class_str: lion
+
 data_loader:
   train:
-    batch_size: 128
+    batch_size: 1024
     shuffle: true
     pin_memory: true
     num_workers: 4
@@ -39,7 +45,7 @@ optim:
         base_optim:
           path: torch.optim.AdamW
           kwargs:
-            lr: 0.3
+            lr: 1.0
         beta_start: 1e-8
         beta_end: 1e-8
 
@@ -53,12 +59,14 @@ collator:
   _target_: summer_clip.clip_prompt.prompt_learner.LeftPromptCollator
 
 accelerator:
-  gradient_accumulation_steps: 16
+  gradient_accumulation_steps: 1
 
 training:
   epochs_num: 20
   info_steps: 1
   clip_grad_norm: 1.0
+  max_top_prompts: 50
+  new_top_prompts_each_epoch: false
   checkpoints_dir: checkpoints/
 
 log:
