--- a/summer_clip/conf/train_prompt.yaml
+++ b/summer_clip/conf/train_prompt.yaml
@@ -22,10 +22,16 @@ model:
   meta_cfg_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2023-02-02/22-43-01/checkpoints/epoch_4/step_222605/model_cfg.yaml
   state_dict_path: /home/myurachinskiy/CLIP/summer-clip/outputs/2023-02-02/22-43-01/checkpoints/epoch_4/step_222605/model.ckpt
 
+# prompt_model:
+#   _target_: summer_clip.clip_prompt.prompt_learner.FluentPromptModel
+#   model_cfg:
+#     cdist_kwargs: {}
+
 prompt_model:
-  _target_: summer_clip.clip_prompt.prompt_learner.FluentPromptModel
+  _target_: summer_clip.clip_prompt.autoprompt_learner.AutoPromptModel
   model_cfg:
-    cdist_kwargs: {}
+    num_cands: 64
+    search_steps: 1
 
 # init_prompter:
 #   _target_: summer_clip.clip_prompt.prompt_learner.InitNumTokensPrompter
@@ -43,7 +49,7 @@ text_batcher:
 
 data_loader:
   train:
-    batch_size: 1024
+    batch_size: 20480
     shuffle: true
     pin_memory: true
     num_workers: 4
@@ -81,9 +87,8 @@ accelerator:
   gradient_accumulation_steps: 1
 
 training:
-  epochs_num: 20
+  epochs_num: 2
   info_steps: 1
-  clip_grad_norm: 1.0
   max_top_prompts: 50
   new_top_prompts_each_epoch: false
   checkpoints_dir: checkpoints/
