--- a/summer_clip/conf/train_prompt.yaml
+++ b/summer_clip/conf/train_prompt.yaml
@@ -50,7 +50,7 @@ text_batcher:
 
 data_loader:
   train:
-    batch_size: 4
+    batch_size: 64
     shuffle: true
     pin_memory: true
     num_workers: 4
@@ -66,6 +66,7 @@ loss:
 training:
   epochs_num: 1
   info_steps: 1
+  classes_batch_size: 64
   max_top_prompts: 50
   gradient_accumulation_steps: 1
   new_top_prompts_each_epoch: false
